# pythonweb11

./: .coverage  .gitignore  README.MD  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 8563427dfaa0_add_users.py  cd91e5df81be_init.py  f0ac71d53c88_renovation.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_repositiry_contacts.py  test_unit_repository_users.py
