[tool.poetry]
name = "pythonweb11"
version = "0.1.0"
description = ""
authors = ["Sokil Natalia <sokilnatalka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.10.4"
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
