[tool.poetry]
name = "pythonweb11"
version = "0.1.0"
description = ""
authors = ["Sokil Natalia <sokilnatalka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.10.4"
pydantic = {extras = ["email"], version = "^1.10.7"}
passlib = {extras = ["scrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
db = "^0.1.1"
fastapi-mail = "^1.2.8"
jinja2 = "^3.1.2"
gravatar = "^0.1"
libgravatar = "^1.0.4"
python-dotenv = "^1.0.0"
cloudinary = "^1.33.0"
redis = "^4.5.5"
asyncio = "^3.4.3"
fastapi-limiter = "^0.1.5"
pytest-mock = "^3.10.0"
httpx = "^0.24.1"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
